tests/NormalTests/paczka1/small_fuzzy/25724474.err
Error in line 1: tIfTQYsaIXO A161 7,4
Error in line 3: tIfTQYsaIXO A457 57,7
